// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`"development" environment "baseAssetsOutputPath" option 1`] = `
{
  "plugins": [
    [
      "module-resolver",
      {
        "extensions": [
          ".js",
          ".jsx",
          ".ts",
          ".tsx",
        ],
        "root": [
          "./src/shared",
          "./src",
        ],
        "transformFunctions": [
          "requireWeak",
          "resolveWeak",
          "webpack.requireWeak",
          "webpack.resolveWeak",
        ],
      },
    ],
    [
      "@babel/transform-runtime",
      {
        "useESModules": true,
      },
    ],
    [
      "@dr.pogodin/react-css-modules",
      {
        "autoResolveMultipleImports": true,
        "filetypes": {
          ".scss": {
            "syntax": "postcss-scss",
          },
        },
        "generateScopedName": [Function],
        "replaceImport": true,
      },
    ],
    [
      "@dr.pogodin/transform-assets",
      {
        "extensions": [
          "gif",
          "jpeg",
          "jpg",
          "png",
        ],
        "name": "/test/path/images/[md4:hash:20].[ext]",
      },
    ],
  ],
  "presets": [
    [
      "@babel/env",
      {
        "bugfixes": true,
        "corejs": "3.46",
        "modules": "cjs",
        "targets": "node >= 22",
        "useBuiltIns": "usage",
      },
    ],
    [
      "@babel/react",
      {
        "runtime": "automatic",
      },
    ],
    "@dr.pogodin/babel-preset-svgr",
    [
      "@babel/typescript",
      {
        "onlyRemoveTypeImports": true,
      },
    ],
  ],
}
`;

exports[`"development" environment "baseAssetsOutputPath" option 2`] = `
{
  "plugins": [
    [
      "module-resolver",
      {
        "extensions": [
          ".js",
          ".jsx",
          ".ts",
          ".tsx",
        ],
        "root": [
          "./src/shared",
          "./src",
        ],
        "transformFunctions": [
          "requireWeak",
          "resolveWeak",
          "webpack.requireWeak",
          "webpack.resolveWeak",
        ],
      },
    ],
    [
      "@babel/transform-runtime",
      {
        "useESModules": true,
      },
    ],
    [
      "@dr.pogodin/react-css-modules",
      {
        "autoResolveMultipleImports": true,
        "filetypes": {
          ".scss": {
            "syntax": "postcss-scss",
          },
        },
        "generateScopedName": [Function],
        "replaceImport": true,
      },
    ],
    [
      "@dr.pogodin/transform-assets",
      {
        "extensions": [
          "gif",
          "jpeg",
          "jpg",
          "png",
        ],
        "name": "/test/path/images/[md4:hash:20].[ext]",
      },
    ],
  ],
  "presets": [
    [
      "@babel/env",
      {
        "bugfixes": true,
        "corejs": "3.46",
        "modules": "cjs",
        "targets": "node >= 22",
        "useBuiltIns": "usage",
      },
    ],
    [
      "@babel/react",
      {
        "runtime": "automatic",
      },
    ],
    "@dr.pogodin/babel-preset-svgr",
  ],
}
`;

exports[`"development" environment "noStyling" variation 1`] = `
{
  "plugins": [
    [
      "module-resolver",
      {
        "extensions": [
          ".js",
          ".jsx",
          ".ts",
          ".tsx",
        ],
        "root": [
          "./src/shared",
          "./src",
        ],
        "transformFunctions": [
          "requireWeak",
          "resolveWeak",
          "webpack.requireWeak",
          "webpack.resolveWeak",
        ],
      },
    ],
    [
      "@babel/transform-runtime",
      {
        "useESModules": true,
      },
    ],
    [
      "@dr.pogodin/transform-assets",
      {
        "extensions": [
          "gif",
          "jpeg",
          "jpg",
          "png",
        ],
        "name": "/images/[md4:hash:20].[ext]",
      },
    ],
  ],
  "presets": [
    [
      "@babel/env",
      {
        "bugfixes": true,
        "corejs": "3.46",
        "modules": "cjs",
        "targets": "node >= 22",
        "useBuiltIns": "usage",
      },
    ],
    [
      "@babel/react",
      {
        "runtime": "automatic",
      },
    ],
    "@dr.pogodin/babel-preset-svgr",
    [
      "@babel/typescript",
      {
        "onlyRemoveTypeImports": true,
      },
    ],
  ],
}
`;

exports[`"development" environment "noStyling" variation 2`] = `
{
  "plugins": [
    [
      "module-resolver",
      {
        "extensions": [
          ".js",
          ".jsx",
          ".ts",
          ".tsx",
        ],
        "root": [
          "./src/shared",
          "./src",
        ],
        "transformFunctions": [
          "requireWeak",
          "resolveWeak",
          "webpack.requireWeak",
          "webpack.resolveWeak",
        ],
      },
    ],
    [
      "@babel/transform-runtime",
      {
        "useESModules": true,
      },
    ],
    [
      "@dr.pogodin/transform-assets",
      {
        "extensions": [
          "gif",
          "jpeg",
          "jpg",
          "png",
        ],
        "name": "/images/[md4:hash:20].[ext]",
      },
    ],
  ],
  "presets": [
    [
      "@babel/env",
      {
        "bugfixes": true,
        "corejs": "3.46",
        "modules": "cjs",
        "targets": "node >= 22",
        "useBuiltIns": "usage",
      },
    ],
    [
      "@babel/react",
      {
        "runtime": "automatic",
      },
    ],
    "@dr.pogodin/babel-preset-svgr",
  ],
}
`;

exports[`"development" environment Default config 1`] = `
{
  "plugins": [
    [
      "module-resolver",
      {
        "extensions": [
          ".js",
          ".jsx",
          ".ts",
          ".tsx",
        ],
        "root": [
          "./src/shared",
          "./src",
        ],
        "transformFunctions": [
          "requireWeak",
          "resolveWeak",
          "webpack.requireWeak",
          "webpack.resolveWeak",
        ],
      },
    ],
    [
      "@babel/transform-runtime",
      {
        "useESModules": true,
      },
    ],
    [
      "@dr.pogodin/react-css-modules",
      {
        "autoResolveMultipleImports": true,
        "filetypes": {
          ".scss": {
            "syntax": "postcss-scss",
          },
        },
        "generateScopedName": [Function],
        "replaceImport": true,
      },
    ],
    [
      "@dr.pogodin/transform-assets",
      {
        "extensions": [
          "gif",
          "jpeg",
          "jpg",
          "png",
        ],
        "name": "/images/[md4:hash:20].[ext]",
      },
    ],
  ],
  "presets": [
    [
      "@babel/env",
      {
        "bugfixes": true,
        "corejs": "3.46",
        "modules": "cjs",
        "targets": "node >= 22",
        "useBuiltIns": "usage",
      },
    ],
    [
      "@babel/react",
      {
        "runtime": "automatic",
      },
    ],
    "@dr.pogodin/babel-preset-svgr",
    [
      "@babel/typescript",
      {
        "onlyRemoveTypeImports": true,
      },
    ],
  ],
}
`;

exports[`"development" environment Default config 2`] = `
{
  "plugins": [
    [
      "module-resolver",
      {
        "extensions": [
          ".js",
          ".jsx",
          ".ts",
          ".tsx",
        ],
        "root": [
          "./src/shared",
          "./src",
        ],
        "transformFunctions": [
          "requireWeak",
          "resolveWeak",
          "webpack.requireWeak",
          "webpack.resolveWeak",
        ],
      },
    ],
    [
      "@babel/transform-runtime",
      {
        "useESModules": true,
      },
    ],
    [
      "@dr.pogodin/react-css-modules",
      {
        "autoResolveMultipleImports": true,
        "filetypes": {
          ".scss": {
            "syntax": "postcss-scss",
          },
        },
        "generateScopedName": [Function],
        "replaceImport": true,
      },
    ],
    [
      "@dr.pogodin/transform-assets",
      {
        "extensions": [
          "gif",
          "jpeg",
          "jpg",
          "png",
        ],
        "name": "/images/[md4:hash:20].[ext]",
      },
    ],
  ],
  "presets": [
    [
      "@babel/env",
      {
        "bugfixes": true,
        "corejs": "3.46",
        "modules": "cjs",
        "targets": "node >= 22",
        "useBuiltIns": "usage",
      },
    ],
    [
      "@babel/react",
      {
        "runtime": "automatic",
      },
    ],
    "@dr.pogodin/babel-preset-svgr",
  ],
}
`;

exports[`"production" environment "baseAssetsOutputPath" option 1`] = `
{
  "plugins": [
    [
      "module-resolver",
      {
        "extensions": [
          ".js",
          ".jsx",
          ".ts",
          ".tsx",
        ],
        "root": [
          "./src/shared",
          "./src",
        ],
        "transformFunctions": [
          "requireWeak",
          "resolveWeak",
          "webpack.requireWeak",
          "webpack.resolveWeak",
        ],
      },
    ],
    [
      "@babel/transform-runtime",
      {
        "useESModules": true,
      },
    ],
    [
      "@dr.pogodin/react-css-modules",
      {
        "autoResolveMultipleImports": true,
        "filetypes": {
          ".scss": {
            "syntax": "postcss-scss",
          },
        },
        "generateScopedName": [Function],
        "replaceImport": true,
      },
    ],
    [
      "@dr.pogodin/transform-assets",
      {
        "extensions": [
          "gif",
          "jpeg",
          "jpg",
          "png",
        ],
        "name": "/test/path/images/[md4:hash:20].[ext]",
      },
    ],
  ],
  "presets": [
    [
      "@babel/env",
      {
        "bugfixes": true,
        "corejs": "3.46",
        "modules": "cjs",
        "targets": "node >= 22",
        "useBuiltIns": "usage",
      },
    ],
    [
      "@babel/react",
      {
        "runtime": "automatic",
      },
    ],
    "@dr.pogodin/babel-preset-svgr",
    [
      "@babel/typescript",
      {
        "onlyRemoveTypeImports": true,
      },
    ],
  ],
}
`;

exports[`"production" environment "baseAssetsOutputPath" option 2`] = `
{
  "plugins": [
    [
      "module-resolver",
      {
        "extensions": [
          ".js",
          ".jsx",
          ".ts",
          ".tsx",
        ],
        "root": [
          "./src/shared",
          "./src",
        ],
        "transformFunctions": [
          "requireWeak",
          "resolveWeak",
          "webpack.requireWeak",
          "webpack.resolveWeak",
        ],
      },
    ],
    [
      "@babel/transform-runtime",
      {
        "useESModules": true,
      },
    ],
    [
      "@dr.pogodin/react-css-modules",
      {
        "autoResolveMultipleImports": true,
        "filetypes": {
          ".scss": {
            "syntax": "postcss-scss",
          },
        },
        "generateScopedName": [Function],
        "replaceImport": true,
      },
    ],
    [
      "@dr.pogodin/transform-assets",
      {
        "extensions": [
          "gif",
          "jpeg",
          "jpg",
          "png",
        ],
        "name": "/test/path/images/[md4:hash:20].[ext]",
      },
    ],
  ],
  "presets": [
    [
      "@babel/env",
      {
        "bugfixes": true,
        "corejs": "3.46",
        "modules": "cjs",
        "targets": "node >= 22",
        "useBuiltIns": "usage",
      },
    ],
    [
      "@babel/react",
      {
        "runtime": "automatic",
      },
    ],
    "@dr.pogodin/babel-preset-svgr",
  ],
}
`;

exports[`"production" environment "noStyling" variation 1`] = `
{
  "plugins": [
    [
      "module-resolver",
      {
        "extensions": [
          ".js",
          ".jsx",
          ".ts",
          ".tsx",
        ],
        "root": [
          "./src/shared",
          "./src",
        ],
        "transformFunctions": [
          "requireWeak",
          "resolveWeak",
          "webpack.requireWeak",
          "webpack.resolveWeak",
        ],
      },
    ],
    [
      "@babel/transform-runtime",
      {
        "useESModules": true,
      },
    ],
    [
      "@dr.pogodin/transform-assets",
      {
        "extensions": [
          "gif",
          "jpeg",
          "jpg",
          "png",
        ],
        "name": "/images/[md4:hash:20].[ext]",
      },
    ],
  ],
  "presets": [
    [
      "@babel/env",
      {
        "bugfixes": true,
        "corejs": "3.46",
        "modules": "cjs",
        "targets": "node >= 22",
        "useBuiltIns": "usage",
      },
    ],
    [
      "@babel/react",
      {
        "runtime": "automatic",
      },
    ],
    "@dr.pogodin/babel-preset-svgr",
    [
      "@babel/typescript",
      {
        "onlyRemoveTypeImports": true,
      },
    ],
  ],
}
`;

exports[`"production" environment "noStyling" variation 2`] = `
{
  "plugins": [
    [
      "module-resolver",
      {
        "extensions": [
          ".js",
          ".jsx",
          ".ts",
          ".tsx",
        ],
        "root": [
          "./src/shared",
          "./src",
        ],
        "transformFunctions": [
          "requireWeak",
          "resolveWeak",
          "webpack.requireWeak",
          "webpack.resolveWeak",
        ],
      },
    ],
    [
      "@babel/transform-runtime",
      {
        "useESModules": true,
      },
    ],
    [
      "@dr.pogodin/transform-assets",
      {
        "extensions": [
          "gif",
          "jpeg",
          "jpg",
          "png",
        ],
        "name": "/images/[md4:hash:20].[ext]",
      },
    ],
  ],
  "presets": [
    [
      "@babel/env",
      {
        "bugfixes": true,
        "corejs": "3.46",
        "modules": "cjs",
        "targets": "node >= 22",
        "useBuiltIns": "usage",
      },
    ],
    [
      "@babel/react",
      {
        "runtime": "automatic",
      },
    ],
    "@dr.pogodin/babel-preset-svgr",
  ],
}
`;

exports[`"production" environment Default config 1`] = `
{
  "plugins": [
    [
      "module-resolver",
      {
        "extensions": [
          ".js",
          ".jsx",
          ".ts",
          ".tsx",
        ],
        "root": [
          "./src/shared",
          "./src",
        ],
        "transformFunctions": [
          "requireWeak",
          "resolveWeak",
          "webpack.requireWeak",
          "webpack.resolveWeak",
        ],
      },
    ],
    [
      "@babel/transform-runtime",
      {
        "useESModules": true,
      },
    ],
    [
      "@dr.pogodin/react-css-modules",
      {
        "autoResolveMultipleImports": true,
        "filetypes": {
          ".scss": {
            "syntax": "postcss-scss",
          },
        },
        "generateScopedName": [Function],
        "replaceImport": true,
      },
    ],
    [
      "@dr.pogodin/transform-assets",
      {
        "extensions": [
          "gif",
          "jpeg",
          "jpg",
          "png",
        ],
        "name": "/images/[md4:hash:20].[ext]",
      },
    ],
  ],
  "presets": [
    [
      "@babel/env",
      {
        "bugfixes": true,
        "corejs": "3.46",
        "modules": "cjs",
        "targets": "node >= 22",
        "useBuiltIns": "usage",
      },
    ],
    [
      "@babel/react",
      {
        "runtime": "automatic",
      },
    ],
    "@dr.pogodin/babel-preset-svgr",
    [
      "@babel/typescript",
      {
        "onlyRemoveTypeImports": true,
      },
    ],
  ],
}
`;

exports[`"production" environment Default config 2`] = `
{
  "plugins": [
    [
      "module-resolver",
      {
        "extensions": [
          ".js",
          ".jsx",
          ".ts",
          ".tsx",
        ],
        "root": [
          "./src/shared",
          "./src",
        ],
        "transformFunctions": [
          "requireWeak",
          "resolveWeak",
          "webpack.requireWeak",
          "webpack.resolveWeak",
        ],
      },
    ],
    [
      "@babel/transform-runtime",
      {
        "useESModules": true,
      },
    ],
    [
      "@dr.pogodin/react-css-modules",
      {
        "autoResolveMultipleImports": true,
        "filetypes": {
          ".scss": {
            "syntax": "postcss-scss",
          },
        },
        "generateScopedName": [Function],
        "replaceImport": true,
      },
    ],
    [
      "@dr.pogodin/transform-assets",
      {
        "extensions": [
          "gif",
          "jpeg",
          "jpg",
          "png",
        ],
        "name": "/images/[md4:hash:20].[ext]",
      },
    ],
  ],
  "presets": [
    [
      "@babel/env",
      {
        "bugfixes": true,
        "corejs": "3.46",
        "modules": "cjs",
        "targets": "node >= 22",
        "useBuiltIns": "usage",
      },
    ],
    [
      "@babel/react",
      {
        "runtime": "automatic",
      },
    ],
    "@dr.pogodin/babel-preset-svgr",
  ],
}
`;

exports[`Module exports 1`] = `[Function]`;
